claim ownership endpoint
